--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -16,4 +16,4 @@
 @use 'style-settings';
 
 @use 'shared/fonts/main_fonts';
-@use 'shared/fonts/additionnal_fonts';
+/*@use 'shared/fonts/additionnal_fonts';*/
