--- a/css/editor/callouts/callout-film-strip.css
+++ b/css/editor/callouts/callout-film-strip.css
@@ -36,20 +36,20 @@
   min-width: calc(var(--frame-width) + var(--padding-x) * 2);
   background-color: rgb(var(--mono-rgb-100));
   padding: var(--padding-y) var(--padding-x);
-  mask-image: linear-gradient(to right, transparent 0px, transparent calc(var(--hole-width) * 0.5 - var(--hole-fading) * 0.5), black calc(var(--hole-width) * 0.5 + var(--hole-fading) * 0.5), black calc(var(--hole-width) * 0.5 + var(--gap) - var(--hole-fading) * 0.5), transparent calc(var(--hole-width) * 0.5 + var(--gap) + var(--hole-fading) * 0.5), transparent calc(var(--hole-width) + var(--gap))), linear-gradient(to bottom, black, black calc(2 * var(--gap) - var(--hole-fading) * 0.5), transparent calc(2 * var(--gap) + var(--hole-fading) * 0.5), transparent calc(2 * var(--gap) + var(--hole-height) - var(--hole-fading) * 0.5), black calc(2 * var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5), black calc(var(--padding-y) + var(--frame-height) + var(--gap) - var(--hole-fading) * 0.5), transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-fading) * 0.5), transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) - var(--hole-fading) * 0.5), black calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5), black 100%);
-  mask-size: calc(var(--hole-width) + var(--gap)) 100%, 100%;
-  mask-position: left, center;
-  mask-repeat: repeat-x, no-repeat;
+  -webkit-mask-image: linear-gradient(to right, transparent 0px, transparent calc(var(--hole-width) * 0.5 - var(--hole-fading) * 0.5), black calc(var(--hole-width) * 0.5 + var(--hole-fading) * 0.5), black calc(var(--hole-width) * 0.5 + var(--gap) - var(--hole-fading) * 0.5), transparent calc(var(--hole-width) * 0.5 + var(--gap) + var(--hole-fading) * 0.5), transparent calc(var(--hole-width) + var(--gap))), linear-gradient(to bottom, black, black calc(2 * var(--gap) - var(--hole-fading) * 0.5), transparent calc(2 * var(--gap) + var(--hole-fading) * 0.5), transparent calc(2 * var(--gap) + var(--hole-height) - var(--hole-fading) * 0.5), black calc(2 * var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5), black calc(var(--padding-y) + var(--frame-height) + var(--gap) - var(--hole-fading) * 0.5), transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-fading) * 0.5), transparent calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) - var(--hole-fading) * 0.5), black calc(var(--padding-y) + var(--frame-height) + var(--gap) + var(--hole-height) + var(--hole-fading) * 0.5), black 100%);
+  -webkit-mask-size: calc(var(--hole-width) + var(--gap)) 100%, 100%;
+  -webkit-mask-position: left, center;
+  -webkit-mask-repeat: repeat-x, no-repeat;
 }
 .callout[data-callout=film-strip] img {
   width: 1000%;
   height: 100%;
   object-fit: cover;
   filter: sepia(0.5);
-  mask-image: linear-gradient(to right, transparent 0px, black var(--img-fading), black calc(100% - var(--img-fading)), transparent 100%), linear-gradient(to bottom, transparent 0px, black var(--img-fading), black calc(100% - var(--img-fading)), transparent 100%);
-  mask-size: 100%;
-  mask-position: center;
-  mask-composite: intersect;
+  -webkit-mask-image: linear-gradient(to right, transparent 0px, black var(--img-fading), black calc(100% - var(--img-fading)), transparent 100%), linear-gradient(to bottom, transparent 0px, black var(--img-fading), black calc(100% - var(--img-fading)), transparent 100%);
+  -webkit-mask-size: 100%;
+  -webkit-mask-position: center;
+  -webkit-mask-composite: intersect;
 }
 .callout[data-callout=film-strip] .callout-content > p > span::after {
   content: "← " counter(frames) " →";
