--- a/css/editor/lists/family-tree.css
+++ b/css/editor/lists/family-tree.css
@@ -86,7 +86,7 @@ ul:has(> li > .tag[href="#family-tree"]) li:has(> ul > li > .tag[href="#wed"]) >
   margin: 0;
   padding: 0;
   font-size: 10px;
-  mask-image: none;
+  -webkit-mask-image: none;
   background: none;
   box-shadow: none;
 }
