--- a/css/editor/lists/tasks.css
+++ b/css/editor/lists/tasks.css
@@ -11,9 +11,9 @@
   position: absolute;
   top: -1px;
   inset-inline-start: -1px;
-  mask-size: 100% 100%;
-  mask-position: center;
-  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  -webkit-mask-repeat: no-repeat;
   mask-image: var(--icon-failed);
 }
 
@@ -30,9 +30,9 @@
   position: absolute;
   top: -1px;
   inset-inline-start: -1px;
-  mask-size: 100% 100%;
-  mask-position: center;
-  mask-repeat: no-repeat;
+  -webkit-mask-size: 100% 100%;
+  -webkit-mask-position: center;
+  -webkit-mask-repeat: no-repeat;
   mask-image: var(--icon-incomplete);
 }
 
@@ -57,9 +57,9 @@ body {
     position: absolute;
     top: -1px;
     inset-inline-start: -1px;
-    mask-size: 100% 100%;
-    mask-position: center;
-    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    -webkit-mask-position: center;
+    -webkit-mask-repeat: no-repeat;
   }
   :is(.HyperMD-task-line, .task-list-item)[data-task=">"] {
     --checkbox-color: var(--color-base-50);
