--- a/scss/editor/callouts/_callout-letter.scss
+++ b/scss/editor/callouts/_callout-letter.scss
@@ -26,10 +26,10 @@
         width: 1em;
         height: 1em;
         background-color: rgb(var(--callout-color));
-        mask-position: 50% 50%;
-        mask-size: 100% 100%;
-        mask-repeat: no-repeat;
-        mask-image: var(--feather-mask);
+        -webkit-mask-position: 50% 50%;
+        -webkit-mask-size: 100% 100%;
+        -webkit-mask-repeat: no-repeat;
+        -webkit-mask-image: var(--feather-mask);
     }
     .callout-fold {
         align-items: baseline;
@@ -42,15 +42,15 @@
         width: 1em;
         height: 1em;
         background-color: rgb(var(--callout-color));
-        mask-position: 50% 50%;
-        mask-size: 100% 100%;
-        mask-repeat: no-repeat;
+        -webkit-mask-position: 50% 50%;
+        -webkit-mask-size: 100% 100%;
+        -webkit-mask-repeat: no-repeat;
     }
     &.is-collapsed .callout-fold::after {
-        mask-image: var(--lucide-mail);
+        -webkit-mask-image: var(--lucide-mail);
     }
     &:not(.is-collapsed) .callout-fold::after {
-        mask-image: var(--lucide-mail-open);
+        -webkit-mask-image: var(--lucide-mail-open);
     }
 
     .callout-content {
