--- a/scss/editor/lists/_family-tree.scss
+++ b/scss/editor/lists/_family-tree.scss
@@ -90,7 +90,7 @@ ul:has(> li > .tag[href='#family-tree']) {
         margin: 0;
         padding: 0;
         font-size: 10px;
-        mask-image: none;
+        -webkit-mask-image: none;
         background: none;
         box-shadow: none;
     }
