--- a/scss/editor/lists/tasks/_tasks-standard-boxes.scss
+++ b/scss/editor/lists/tasks/_tasks-standard-boxes.scss
@@ -8,7 +8,7 @@
 
         input[type=checkbox]::after {
             @include tasks-definition.icon-after;
-            mask-image: var(--#{$icon});
+            -webkit-mask-image: var(--#{$icon});
         }
     }
 }
