--- a/scss/mobile/_mobile.scss
+++ b/scss/mobile/_mobile.scss
@@ -9,14 +9,14 @@
 // Circle cutouts
 .workspace-drawer:is(.mod-left, .mod-right) {
     padding-inline: var(--cutout-outline-inset);
-    mask-composite: intersect;
+    -webkit-mask-composite: intersect;
 }
 .workspace-drawer.mod-left {
-    mask-image: radial-gradient(var(--cutout-corner-radius) at 100% 0, transparent 100%, black),
+    -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 100% 0, transparent 100%, black),
           radial-gradient(var(--cutout-corner-radius) at 100% 100%, transparent 100%, black);
 }
 .workspace-drawer.mod-right {
-    mask-image: radial-gradient(var(--cutout-corner-radius) at 0 0, transparent 100%, black),
+    -webkit-mask-image: radial-gradient(var(--cutout-corner-radius) at 0 0, transparent 100%, black),
           radial-gradient(var(--cutout-corner-radius) at 0 100%, transparent 100%, black);
 }
 
@@ -25,7 +25,7 @@
     position: absolute;
     inset: var(--cutout-outline-inset);
     background: var(--background-secondary);
-    mask: radial-gradient(
+    -webkit-mask: radial-gradient(
         var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius),
         transparent calc(100% - 1px),
         black calc(100% - 1px) 100%,
