--- a/scss/window/_sidebar.scss
+++ b/scss/window/_sidebar.scss
@@ -17,7 +17,7 @@ body {
 .mod-sidedock .workspace-leaf {
     background-color: var(--workleaves-background);
     box-shadow: inset 0 0 20px 3px var(--shadow-color);
-    mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
+    -webkit-mask: radial-gradient(var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius), transparent 100%, black)
         calc(-1 * var(--cutout-corner-radius)) calc(-1 * var(--cutout-corner-radius));
 }
 
@@ -32,7 +32,7 @@ body {
     position: absolute;
     inset: var(--cutout-outline-inset);
     background: var(--sidedock-inset-border-color);
-    mask: radial-gradient(
+    -webkit-mask: radial-gradient(
         var(--cutout-corner-radius) at var(--cutout-corner-radius) var(--cutout-corner-radius),
         transparent calc(100% - 1px),
         black calc(100% - 1px) 100%,
