--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -4,7 +4,7 @@
 @use 'print';
 
 
-/*@use 'canvas/canvas';*/
+@use 'canvas/canvas';
 @use 'components/components';
 @use 'editor/editor';
 @use 'plugins/plugins';
@@ -16,4 +16,4 @@
 @use 'style-settings';
 
 @use 'shared/fonts/main_fonts';
-/*@use 'shared/fonts/additionnal_fonts';*/
+@use 'shared/fonts/additionnal_fonts';
