--- a/scss/editor/callouts/_callout-polaroid.scss
+++ b/scss/editor/callouts/_callout-polaroid.scss
@@ -55,13 +55,13 @@ body {
 }
 
 
-.callout[data-callout="polaroid"][data-callout-metadata~="float-right"] {
+.callout[data-callout="polaroid"][data-callout-metadata~="right"] {
     margin-left: var(--size-4-4);
     transform: rotate(calc(-1 * var(--polaroid-angle)));
 }
 
 
-.callout[data-callout="polaroid"][data-callout-metadata~="float-left"] {
+.callout[data-callout="polaroid"][data-callout-metadata~="left"] {
     margin-right: var(--size-4-4);
     transform: rotate(var(--polaroid-angle));
 }
