--- a/postcss/editor/image.css
+++ b/postcss/editor/image.css
@@ -9,13 +9,13 @@ body {
   font-size: 0;
 }
 
-.markdown-rendered .image-embed[alt~=right] {
+.markdown-rendered .image-embed:is([alt~=right], [alt~=float-right]) {
   float: right;
   clear: right;
   margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
 }
 
-.markdown-rendered .image-embed[alt~=left] {
+.markdown-rendered .image-embed:is([alt~=left], [alt~=float-left]) {
   float: left;
   clear: left;
   margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
