--- a/scss/editor/headings/_h1-display.scss
+++ b/scss/editor/headings/_h1-display.scss
@@ -37,13 +37,13 @@
 
 .fas-h1-display .markdown-preview-view:not(:is(.newspaper, .movie-script, .minimalist, .h1-stroke, .h1-normal, .sci-fi)),
 .markdown-preview-view.h1-display {
-    --h1-line-height: 1.2em;
-    --h1-size: 3em;
-    --h1-font: var(--font-typewriter), var(--font-text);
-    --h1-color: var(--workleaves-background);
-    --h1-background: var(--color-base-100);
 
-    h1 {
+    h1:not(.callout h1, ul h1, ol h1) {
+        --h1-line-height: 1.2em;
+        --h1-size: 3em;
+        --h1-font: var(--font-typewriter), var(--font-text);
+        --h1-color: var(--workleaves-background);
+        --h1-background: var(--color-base-100);
         
         background-color: var(--h1-background);
         text-align: center;
