--- a/postcss/editor/headings/h1-display.css
+++ b/postcss/editor/headings/h1-display.css
@@ -41,38 +41,36 @@ body {
   --h6-color: color-mix(in srgb, var(--h2-color), var(--text-normal) 80%);
 }
 
-.markdown-preview-view.h1-display {
+.markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1) {
   --h1-line-height: 1.2em;
   --h1-size: 3em;
   --h1-font: var(--font-typewriter), var(--font-text);
   --h1-color: var(--workleaves-background);
   --h1-background: var(--color-base-100);
-}
-.markdown-preview-view.h1-display h1 {
   background-color: var(--h1-background);
   text-align: center;
   position: relative;
   padding: var(--cutout-outline-inset);
   clip-path: polygon(0 var(--cutout-corner-angle), var(--cutout-corner-angle) 0, calc(100% - var(--cutout-corner-angle)) 0, 100% var(--cutout-corner-angle), 100% calc(100% - var(--cutout-corner-angle)), calc(100% - var(--cutout-corner-angle)) 100%, var(--cutout-corner-angle) 100%, 0 calc(100% - var(--cutout-corner-angle)));
 }
-.markdown-preview-view.h1-display h1::before {
+.markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1)::before {
   content: "";
   position: absolute;
   background: var(--cutout-border-background);
   inset: var(--cutout-outline-inset);
   clip-path: polygon(0 var(--cutout-corner-angle), var(--cutout-corner-angle) 0, calc(100% - var(--cutout-corner-angle)) 0, 100% var(--cutout-corner-angle), 100% calc(100% - var(--cutout-corner-angle)), calc(100% - var(--cutout-corner-angle)) 100%, var(--cutout-corner-angle) 100%, 0 calc(100% - var(--cutout-corner-angle)), 0 var(--cutout-corner-angle), var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5), var(--cutout-outline-thickness) calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5), calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5) calc(100% - var(--cutout-outline-thickness)), calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5) calc(100% - var(--cutout-outline-thickness)), calc(100% - var(--cutout-outline-thickness)) calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5), calc(100% - var(--cutout-outline-thickness)) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5), calc(100% - var(--cutout-corner-angle) - var(--cutout-outline-thickness) * 0.5) var(--cutout-outline-thickness), calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5) var(--cutout-outline-thickness), var(--cutout-outline-thickness) calc(var(--cutout-corner-angle) + var(--cutout-outline-thickness) * 0.5));
 }
-.markdown-preview-view.h1-display h1:is(.is-collapsed > h1)::before {
+.markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1):is(.is-collapsed > h1)::before {
   background: var(--h1-border-color-collapsed);
 }
-.markdown-preview-view.h1-display h1:is(.is-collapsed > h1)::after {
+.markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1):is(.is-collapsed > h1)::after {
   content: "";
   position: absolute;
   inset: 0;
   background: var(--h1-border-color-collapsed);
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%, 0 0, var(--cutout-outline-inset) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px), var(--cutout-outline-inset) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px), calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) calc(100% - var(--cutout-outline-inset)), calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) calc(100% - var(--cutout-outline-inset)), calc(100% - var(--cutout-outline-inset)) calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px), calc(100% - var(--cutout-outline-inset)) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px), calc(100% - var(--cutout-corner-angle) - 0.5 * var(--cutout-outline-inset) - 2px) var(--cutout-outline-inset), calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px) var(--cutout-outline-inset), var(--cutout-outline-inset) calc(var(--cutout-corner-angle) + 0.5 * var(--cutout-outline-inset) + 2px));
 }
-.markdown-preview-view.h1-display h1 .heading-collapse-indicator {
+.markdown-preview-view.h1-display h1:not(.callout h1, ul h1, ol h1) .heading-collapse-indicator {
   margin-inline-start: 0;
 }
 
