--- a/postcss/editor/callouts/callouts-metadata.css
+++ b/postcss/editor/callouts/callouts-metadata.css
@@ -88,13 +88,13 @@
   justify-content: center;
 }
 
-.markdown-preview-view .callout:is([data-callout-metadata=right], [data-callout-metadata=float-right]) {
+.markdown-preview-view .callout:is([data-callout-metadata~=right], [data-callout-metadata~=float-right]) {
   float: right;
   clear: right;
   margin: var(--size-4-3) 0 var(--size-4-3) var(--size-4-3);
 }
 
-.markdown-preview-view .callout:is([data-callout-metadata=left], [data-callout-metadata=float-left]) {
+.markdown-preview-view .callout:is([data-callout-metadata~=left], [data-callout-metadata~=float-left]) {
   float: left;
   clear: left;
   margin: var(--size-4-3) var(--size-4-3) var(--size-4-3) 0;
