--- a/scss/editor/callouts/_callouts.scss
+++ b/scss/editor/callouts/_callouts.scss
@@ -9,6 +9,7 @@
 @use 'callout-email';
 @use 'callout-film-strip';
 @use 'callout-grid';
+@use 'callout-fas-infobox';
 @use 'callout-letter';
 @use 'callout-masonry';
 @use 'callout-paper-fold';
